--- a/src/Wenwen/FrontendBundle/Resources/views/Profile/account.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Profile/account.html.twig
@@ -52,7 +52,7 @@
                     </div>
                 </li>
                 <li>
-                    <a href="javascript:void(0)" class="edit">编辑</a>
+                    <a href="javascript:void(0)" class="edit withdrawPart">注销</a>
                     <label for="withdraw">注销账户</label>
                     <span class="default_value" id="withdraw">如果注销，您的积分会失效，请谨慎操作。</span>
                     <div class="con withdraw">
