--- a/src/Wenwen/FrontendBundle/Resources/views/Vote/_voteList.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Vote/_voteList.html.twig
@@ -26,18 +26,19 @@
             </div>
             {% endif %}
 
-            {% if (item.endTime|date("Ymd") < "now"|date('Ymd')) %}
-                <div class="survey-btn"><a href="{{ path('jili_frontend_vote_result',{'id':item.id}) }}" class="disabled">去看看</a></div>
-            {% else %}
-                {% if app.session.has('uid') and item.answerable %}
+            {% if app.session.has('uid')%}
+                {% if item.answerable %}
                 <div class="survey-btn"><a href="{{ path('jili_frontend_vote_show',{'id':item.id}) }}">去投票</a></div>
                 {% else %}
                 <div class="survey-btn"><a href="{{ path('jili_frontend_vote_result',{'id':item.id}) }}" class="disabled">去看看</a></div>
                 {% endif %}
+            {% else %}
+                {% if (item.endTime|date("Ymd") < "now"|date('Ymd')) %}
+                <div class="survey-btn"><a href="{{ path('jili_frontend_vote_result',{'id':item.id}) }}" class="disabled">去看看</a></div>
+                {% else %}
+                <div class="survey-btn"><a href="{{ path('jili_frontend_vote_show',{'id':item.id}) }}">去投票</a></div>
+                {% endif %}
             {% endif %}
-
-
-            
         </li>
     {% endfor %}
 {% endif %}
