--- a/src/Jili/BackendBundle/Resources/views/PointManage/pointHistorySearch.html.twig
+++ b/src/Jili/BackendBundle/Resources/views/PointManage/pointHistorySearch.html.twig
@@ -11,7 +11,6 @@
 <script type="text/javascript">
 $(document).ready(function(){
   $("#select").click(function (){
-
       var email = $.trim($("#email").val());
       if( email == null || email == ""){
           alert("请输入email");
@@ -42,8 +41,8 @@ $(document).ready(function(){
                 <option value="{{ item.id }}" {% if item.id==category_id %} selected="selected"{% endif %}>{{item.id }}-{{ item.categoryName }}{{ item.asp }}{{item.displayName }}</option>
                 {% endfor %}
             </select>&nbsp;&nbsp; email:<input type="text" id="email" name="email" value="{% if email %}{{ email }}{% endif %}" size="30" />
-            开始时间:<input id="start" name="start_time" value="{% if start %}{{ start }}{% endif %}" size="18" maxlength="60" readonly="readonly" onclick="wdatepicker()" class="wdate" style="cursor: pointer" /> &nbsp;
-            结束时间:<input name="end_time" id="end" value="{% if end %}{{ end }}{% endif %}" size="18" maxlength="60" readonly="readonly" onclick="wdatepicker()" class="wdate" style="cursor: pointer" />&nbsp; 
+            开始时间:<input id="start" name="start_time" value="{% if start %}{{ start }}{% endif %}" size="18" maxlength="60" readonly="readonly" onclick="WdatePicker()" class="wdate" style="cursor: pointer" /> &nbsp;
+            结束时间:<input name="end_time" id="end" value="{% if end %}{{ end }}{% endif %}" size="18" maxlength="60" readonly="readonly" onclick="WdatePicker()" class="wdate" style="cursor: pointer" />&nbsp; 
             <input type="button" id="select" name="select" value="查 询" />&nbsp;
             </td>
         </tr>
