--- a/web/css/register.css
+++ b/web/css/register.css
@@ -1,377 +1,1 @@
-.w100 {
-  width: 100%; }
-
-.w1000 {
-  width: 1000px;
-  margin: 0 auto; }
-
-.left {
-  float: left; }
-
-.right {
-  float: right; }
-
-body {
-  font-family: "Microsoft YaHei", Tohoma, Arial;
-  font-size: 12px;
-  background: #f2f3f5;
-  color: #333; }
-
-.main {
-  margin-top: 20px; }
-
-.main-con {
-  background: #fff;
-  border: 1px solid #ebedf2; }
-
-.header {
-  background: #fff;
-  height: 92px;
-  border-bottom: 3px solid #f26f21;
-  -webkit-box-shadow: 0px 1px 5px #d8d8d8;
-  -moz-box-shadow: 0px 1px 5px #d8d8d8;
-  box-shadow: 0px 1px 5px #d8d8d8; }
-  .header .logo a {
-    padding: 15px 20px 15px 0;
-    vertical-align: middle;
-    display: inline-block;
-    *display: inline;
-    *zoom: 1; }
-  .header .logo span {
-    padding: 0 20px;
-    line-height: 35px;
-    font-size: 26px;
-    color: #595654;
-    border-left: 1px solid #ddd;
-    vertical-align: middle;
-    display: inline-block;
-    *display: inline;
-    *zoom: 1; }
-    .header .logo span b {
-      color: #f26f21; }
-  .header p {
-    color: #a0a0a0;
-    font-size: 14px;
-    height: 92px;
-    line-height: 92px; }
-    .header p a {
-      color: #007ec2;
-      font-weight: bold; }
-
-.form li {
-  margin-top: 10px; }
-  .form li label {
-    width: 100px;
-    text-align: right;
-    font-size: 14px;
-    display: inline-block;
-    *display: inline;
-    *zoom: 1; }
-.form input[type='text'], .form input[type='password'], .form input[type='email'] {
-  padding: 0 5px;
-  height: 34px;
-  line-height: 34px;
-  border: 1px solid #e5e5e5;
-  outline: none; }
-  .form input[type='text']:focus, .form input[type='text'].input_focus, .form input[type='password']:focus, .form input[type='password'].input_focus, .form input[type='email']:focus, .form input[type='email'].input_focus {
-    border: 1px solid #3bc570;
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-    transition: all 0.075s;
-    -moz-transition: all 0.075s;
-    -webkit-transition: all 0.075s;
-    -o-transition: all 0.075s; }
-  .form input[type='text'].input_error, .form input[type='password'].input_error, .form input[type='email'].input_error {
-    border: 1px solid #ff0000; }
-.form input[type='text'] {
-  width: 255px; }
-.form span {
-  display: none;
-  text-align: left;
-  line-height: 34px; }
-  .form span.succeed {
-    color: #3bc570;
-    display: inline-block;
-    *display: inline;
-    *zoom: 1;
-    background: url(../img/user/succeedIcon.png) no-repeat 2px 12px;
-    font-size: 0; }
-  .form span.focus {
-    border: 1px solid #e7e7e7;
-    background: #fafafa;
-    color: #898989;
-    display: inline-block;
-    *display: inline;
-    *zoom: 1;
-    vertical-align: top; }
-  .form span.error, .form span strong {
-    border: 1px solid #ffbdbe;
-    background: #ffebeb;
-    color: #ff0000;
-    display: inline-block;
-    *display: inline;
-    *zoom: 1;
-    vertical-align: top; }
-  .form span b {
-    font-size: 20px; }
-  .form span a {
-    display: block;
-    font-size: 16px;
-    color: #319dfa; }
-    .form span a.more {
-      font-size: 12px;
-      display: inline; }
-.form .btn span {
-  width: 74px;
-  text-align: center;
-  height: 36px;
-  line-height: 36px;
-  color: #fff;
-  background: #ff652b;
-  border: 1px solid #ff652b;
-  border-radius: 3px;
-  cursor: pointer;
-  transition: all 0.4s;
-  -moz-transition: all 0.4s;
-  -webkit-transition: all 0.4s;
-  -o-transition: all 0.4s;
-  display: inline-block;
-  *display: inline;
-  *zoom: 1;
-  vertical-align: middle; }
-  .form .btn span:hover {
-    background: #f05218;
-    border: 1px solid #f05218; }
-
-#pwdStrength {
-  padding: 0;
-  margin-right: 4px; }
-  #pwdStrength b {
-    margin-right: 1px;
-    width: 45px;
-    height: 15px;
-    text-align: center;
-    line-height: 15px;
-    font-size: 12px;
-    color: #fff;
-    background: #b9b9b9;
-    vertical-align: middle;
-    display: inline-block;
-    *display: inline;
-    *zoom: 1; }
-    #pwdStrength b.c1 {
-      background: #ff8b3d; }
-
-#signup_email_error ul li {
-  max-width: 280px;
-  line-height: 21px;
-  padding: 8px 0; }
-
-.main-register {
-  position: relative;
-  z-index: 1;
-  padding: 30px 80px 50px; }
-  .main-register.weibo {
-    padding: 50px 80px 80px; }
-  .main-register li {
-    margin-top: 5px;
-    color: #a1a1a1; }
-    .main-register li label {
-      line-height: 30px;
-      text-align: left;
-      color: #575757; }
-    .main-register li input[type='text'], .main-register li input[type='password'], .main-register li input[type='email'] {
-      width: 245px;
-      border: 1px solid #ebedf2;
-      border-radius: 2px; }
-      .main-register li input[type='text']#signup_captcha, .main-register li input[type='password']#signup_captcha, .main-register li input[type='email']#signup_captcha {
-        width: 70px; }
-    .main-register li input[type='checkbox'] {
-      vertical-align: middle;
-      margin-right: 5px; }
-    .main-register li img {
-      vertical-align: middle; }
-    .main-register li span {
-      margin-left: 5px;
-      line-height: 34px;
-      padding: 0 15px;
-      border-radius: 3px;
-      vertical-align: top; }
-      .main-register li span li {
-        margin-top: 0;
-        color: #ff0000; }
-    .main-register li .captcha_reload {
-      background: url(../img/user/change.png) no-repeat 0px 2px;
-      padding-left: 20px;
-      color: #a1a1a1; }
-
-.main-register-btn {
-  margin-top: 30px; }
-  .main-register-btn span {
-    margin-right: 10px;
-    width: 255px;
-    text-align: center;
-    height: 45px;
-    line-height: 45px;
-    font-size: 18px;
-    display: inline-block;
-    *display: inline;
-    *zoom: 1;
-    color: #fff;
-    background: #ff652b;
-    border: 1px solid #ff652b;
-    border-radius: 3px;
-    cursor: pointer;
-    transition: all 0.4s;
-    -moz-transition: all 0.4s;
-    -webkit-transition: all 0.4s;
-    -o-transition: all 0.4s;
-    cursor: pointer; }
-    .main-register-btn span:hover {
-      background: #f05218;
-      border: 1px solid #f05218; }
-  .main-register-btn img {
-    vertical-align: middle; }
-
-.login-others {
-  position: absolute;
-  z-index: 1000;
-  top: 60px;
-  left: 670px;
-  line-height: 40px; }
-  .login-others a {
-    margin-top: 10px;
-    font-size: 14px;
-    width: 128px;
-    height: 40px;
-    text-align: center;
-    color: #404040;
-    background: #fafafa;
-    border: 1px solid #ddd;
-    border-radius: 3px;
-    display: block;
-    cursor: pointer; }
-    .login-others a img {
-      vertical-align: middle;
-      margin-right: 9px; }
-  .login-others .regPoints {
-    margin-top: 40px; }
-
-.subscribe {
-  position: relative;
-  z-index: 2;
-  padding-top: 5px;
-  margin-bottom: 5px; }
-  .subscribe .tips {
-    position: absolute;
-    z-index: 1000;
-    top: 7px;
-    left: 208px; }
-    .subscribe .tips > b {
-      width: 13px;
-      height: 13px;
-      line-height: 13px;
-      border-radius: 50%;
-      background: #979797;
-      color: #fff;
-      text-align: center;
-      cursor: pointer;
-      display: inline-block;
-      *display: inline;
-      *zoom: 1; }
-  .subscribe .tips-con {
-    position: absolute;
-    z-index: 1999;
-    top: 12px;
-    right: -272px;
-    padding-top: 10px;
-    width: 280px;
-    color: #333;
-    display: none; }
-    .subscribe .tips-con p {
-      padding: 5px;
-      line-height: 20px;
-      background: #fff;
-      border: 1px solid #dedddc;
-      border-radius: 3px;
-      -webkit-box-shadow: 0px 2px 0px #f2f2f2;
-      -moz-box-shadow: 0px 2px 0px #f2f2f2;
-      box-shadow: 0px 2px 0px #f2f2f2; }
-    .subscribe .tips-con b.arrow {
-      position: absolute;
-      z-index: 1999;
-      top: 1px;
-      left: 0;
-      width: 9px;
-      height: 10px;
-      background: url(../img/common/icons_arrow.png) top left no-repeat;
-      display: inline-block;
-      *display: inline;
-      *zoom: 1; }
-
-.main-register-active {
-  margin: 50px 80px 100px;
-  color: #a3a3a3; }
-  .main-register-active .title {
-    font-size: 20px;
-    font-weight: bold;
-    color: #333;
-    line-height: 40px; }
-    .main-register-active .title b {
-      color: #fe5718; }
-  .main-register-active p {
-    line-height: 28px; }
-  .main-register-active .con {
-    padding-top: 20px; }
-    .main-register-active .con .text {
-      margin-left: 80px;
-      padding-left: 75px;
-      background: url(../img/common/success_email.png) no-repeat left 10px; }
-    .main-register-active .con a {
-      margin-top: 10px;
-      width: 118px;
-      height: 27px;
-      line-height: 27px;
-      text-align: center;
-      color: #fff;
-      background: #ff652b;
-      border: 1px solid #ff652b;
-      border-radius: 3px;
-      cursor: pointer;
-      transition: all 0.4s;
-      -moz-transition: all 0.4s;
-      -webkit-transition: all 0.4s;
-      -o-transition: all 0.4s;
-      display: inline-block;
-      *display: inline;
-      *zoom: 1; }
-      .main-register-active .con a:hover {
-        background: #f05218;
-        border: 1px solid #f05218; }
-  .main-register-active .finish .title {
-    line-height: 75px; }
-  .main-register-active .tips {
-    margin-top: 90px;
-    padding: 30px 0 30px 157px;
-    background: #f5f5f6;
-    border-radius: 8px; }
-    .main-register-active .tips dl {
-      margin-bottom: 30px; }
-    .main-register-active .tips dt {
-      font-size: 16px;
-      line-height: 35px;
-      color: #333; }
-    .main-register-active .tips dd {
-      font-size: 12px;
-      line-height: 20px; }
-    .main-register-active .tips b, .main-register-active .tips a {
-      color: #007ec2; }
-
-.footer {
-  padding: 20px 0;
-  line-height: 24px;
-  color: #535353; }
-  .footer .copyright {
-    text-align: center; }
-    .footer .copyright p {
-      line-height: 30px;
-      color: #989898; }
+.w100{width:100%}.w1000{width:1000px;margin:0 auto}.left{float:left}.right{float:right}body{font-family:"Microsoft YaHei",Tohoma,Arial;font-size:12px;background:#f2f3f5;color:#333}.main{margin-top:20px}.main-con{background:#fff;border:1px solid #ebedf2}.header{background:#fff;height:92px;border-bottom:3px solid #f26f21;-webkit-box-shadow:0px 1px 5px #d8d8d8;-moz-box-shadow:0px 1px 5px #d8d8d8;box-shadow:0px 1px 5px #d8d8d8}.header .logo a{padding:15px 20px 15px 0;vertical-align:middle;display:inline-block;*display:inline;*zoom:1}.header .logo span{padding:0 20px;line-height:35px;font-size:26px;color:#595654;border-left:1px solid #ddd;vertical-align:middle;display:inline-block;*display:inline;*zoom:1}.header .logo span b{color:#f26f21}.header p{color:#a0a0a0;font-size:14px;height:92px;line-height:92px}.header p a{color:#007ec2;font-weight:bold}.form li{margin-top:10px}.form li label{width:100px;text-align:right;font-size:14px;display:inline-block;*display:inline;*zoom:1}.form input[type='text'],.form input[type='password'],.form input[type='email']{padding:0 5px;height:34px;line-height:34px;border:1px solid #e5e5e5;outline:none}.form input[type='text']:focus,.form input[type='text'].input_focus,.form input[type='password']:focus,.form input[type='password'].input_focus,.form input[type='email']:focus,.form input[type='email'].input_focus{border:1px solid #3bc570;box-shadow:inset 0 1px 1px rgba(0,0,0,0.075);transition:all 0.075s;-moz-transition:all 0.075s;-webkit-transition:all 0.075s;-o-transition:all 0.075s}.form input[type='text'].input_error,.form input[type='password'].input_error,.form input[type='email'].input_error{border:1px solid red}.form input[type='text']{width:255px}.form span{display:none;text-align:left;line-height:34px}.form span.succeed{color:#3bc570;display:inline-block;*display:inline;*zoom:1;background:url(../img/user/succeedIcon.png) no-repeat 2px 12px;font-size:0}.form span.focus{border:1px solid #e7e7e7;background:#fafafa;color:#898989;display:inline-block;*display:inline;*zoom:1;vertical-align:top}.form span.error,.form span strong{border:1px solid #ffbdbe;background:#ffebeb;color:red;display:inline-block;*display:inline;*zoom:1;vertical-align:top}.form span b{font-size:20px}.form span a{display:block;font-size:16px;color:#319dfa}.form span a.more{font-size:12px;display:inline}.form .btn span{width:74px;text-align:center;height:36px;line-height:36px;color:#fff;background:#ff652b;border:1px solid #ff652b;border-radius:3px;cursor:pointer;transition:all 0.4s;-moz-transition:all 0.4s;-webkit-transition:all 0.4s;-o-transition:all 0.4s;display:inline-block;*display:inline;*zoom:1;vertical-align:middle}.form .btn span:hover{background:#f05218;border:1px solid #f05218}#pwdStrength{padding:0;margin-right:4px}#pwdStrength b{margin-right:1px;width:45px;height:15px;text-align:center;line-height:15px;font-size:12px;color:#fff;background:#b9b9b9;vertical-align:middle;display:inline-block;*display:inline;*zoom:1}#pwdStrength b.c1{background:#ff8b3d}#signup_email_error ul li{max-width:280px;line-height:21px;padding:8px 0}.main-register{position:relative;z-index:1;padding:30px 80px 50px}.main-register.weibo{padding:50px 80px 80px}.main-register li{margin-top:5px;color:#a1a1a1}.main-register li label{line-height:30px;text-align:left;color:#575757}.main-register li input[type='text'],.main-register li input[type='password'],.main-register li input[type='email']{width:245px;border:1px solid #ebedf2;border-radius:2px}.main-register li input[type='text']#signup_captcha,.main-register li input[type='password']#signup_captcha,.main-register li input[type='email']#signup_captcha{width:70px}.main-register li input[type='checkbox']{vertical-align:middle;margin-right:5px}.main-register li img{vertical-align:middle}.main-register li span{margin-left:5px;line-height:34px;padding:0 15px;border-radius:3px;vertical-align:top}.main-register li span li{margin-top:0;color:red}.main-register li .captcha_reload{background:url(../img/user/change.png) no-repeat 0px 2px;padding-left:20px;color:#a1a1a1}.main-register span.succeed{width:2px;height:34px}.main-register-btn{margin-top:30px}.main-register-btn span{margin-right:10px;width:255px;text-align:center;height:45px;line-height:45px;font-size:18px;display:inline-block;*display:inline;*zoom:1;color:#fff;background:#ff652b;border:1px solid #ff652b;border-radius:3px;cursor:pointer;transition:all 0.4s;-moz-transition:all 0.4s;-webkit-transition:all 0.4s;-o-transition:all 0.4s;cursor:pointer}.main-register-btn span:hover{background:#f05218;border:1px solid #f05218}.main-register-btn img{vertical-align:middle}.login-others{position:absolute;z-index:1000;top:60px;left:670px;line-height:40px}.login-others a{margin-top:10px;font-size:14px;width:128px;height:40px;text-align:center;color:#404040;background:#fafafa;border:1px solid #ddd;border-radius:3px;display:block;cursor:pointer}.login-others a img{vertical-align:middle;margin-right:9px}.login-others .regPoints{margin-top:40px}.subscribe{position:relative;z-index:2;padding-top:5px;margin-bottom:5px}.subscribe .tips{position:absolute;z-index:1000;top:7px;left:208px}.subscribe .tips>b{width:13px;height:13px;line-height:13px;border-radius:50%;background:#979797;color:#fff;text-align:center;cursor:pointer;display:inline-block;*display:inline;*zoom:1}.subscribe .tips-con{position:absolute;z-index:1999;top:12px;right:-272px;padding-top:10px;width:280px;color:#333;display:none}.subscribe .tips-con p{padding:5px;line-height:20px;background:#fff;border:1px solid #dedddc;border-radius:3px;-webkit-box-shadow:0px 2px 0px #f2f2f2;-moz-box-shadow:0px 2px 0px #f2f2f2;box-shadow:0px 2px 0px #f2f2f2}.subscribe .tips-con b.arrow{position:absolute;z-index:1999;top:1px;left:0;width:9px;height:10px;background:url(../img/common/icons_arrow.png) top left no-repeat;display:inline-block;*display:inline;*zoom:1}.main-register-active{margin:50px 80px 100px;color:#a3a3a3}.main-register-active .title{font-size:20px;font-weight:bold;color:#333;line-height:40px}.main-register-active .title b{color:#fe5718}.main-register-active p{line-height:28px}.main-register-active .con{padding-top:20px}.main-register-active .con .text{margin-left:80px;padding-left:75px;background:url(../img/common/success_email.png) no-repeat left 10px}.main-register-active .con a{margin-top:10px;width:118px;height:27px;line-height:27px;text-align:center;color:#fff;background:#ff652b;border:1px solid #ff652b;border-radius:3px;cursor:pointer;transition:all 0.4s;-moz-transition:all 0.4s;-webkit-transition:all 0.4s;-o-transition:all 0.4s;display:inline-block;*display:inline;*zoom:1}.main-register-active .con a:hover{background:#f05218;border:1px solid #f05218}.main-register-active .finish .title{line-height:75px}.main-register-active .tips{margin-top:90px;padding:30px 0 30px 157px;background:#f5f5f6;border-radius:8px}.main-register-active .tips dl{margin-bottom:30px}.main-register-active .tips dt{font-size:16px;line-height:35px;color:#333}.main-register-active .tips dd{font-size:12px;line-height:20px}.main-register-active .tips b,.main-register-active .tips a{color:#007ec2}.footer{padding:20px 0;line-height:24px;color:#535353}.footer .copyright{text-align:center}.footer .copyright p{line-height:30px;color:#989898}
