--- a/src/Wenwen/FrontendBundle/Resources/views/Advertisement/index.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Advertisement/index.html.twig
@@ -6,7 +6,7 @@
 <meta name="title" content="体验广告:91问问调查网" />
 {% endblock %}
 {% block stylesheet %}
-<link href="{{ asset('css/advertisement.css') }} " rel="stylesheet" type="text/css">
+<link href="{{ asset('css/experience.css') }} " rel="stylesheet" type="text/css">
 {% endblock %}
  
 {% block header %}
@@ -61,5 +61,5 @@
 {% endblock %}
 
 {% block javascript %}
-<script type="text/javascript" src="{{ asset('js/lib/require.js')}}" defer async="true" data-main="{{ asset('js/app/advertisement/advertisement')}}"></script>
+<script type="text/javascript" src="{{ asset('js/lib/require.js')}}" defer async="true" data-main="{{ asset('js/app/advertisement/experience')}}"></script>
 {% endblock %}
