--- a/src/Wenwen/FrontendBundle/Resources/views/Advertisement/offer99.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Advertisement/offer99.html.twig
@@ -6,7 +6,7 @@
 <meta name="title" content="体验广告:91问问调查网" />
 {% endblock %}
 {% block stylesheet %}
-<link href="{{ asset('css/advertisement.css') }} " rel="stylesheet" type="text/css">
+<link href="{{ asset('css/experience.css') }} " rel="stylesheet" type="text/css">
 {% endblock %}
  
 {% block header %}
