--- a/web/sass/experience.scss
+++ b/web/sass/experience.scss
@@ -184,7 +184,7 @@
 		}
 	}
 }
-.main-con-advertisement{
+.main-con-experience{
 	margin-top: 15px;
 	background: $block-bg-color;
 	border: $block-border;
