fix advertisement img file

--- a/web/sass/shopDetail.scss
+++ b/web/sass/shopDetail.scss
@@ -100,7 +100,7 @@
 	.step{
 		float: left;
 		width: 33.3333%;
-		background: url(../img/advertisement/arrow.png) no-repeat right;
+		background: url(../img/experience/arrow.png) no-repeat right;
 		text-align: center;
 		p{
 			line-height: 45px;
