--- a/src/Wenwen/FrontendBundle/Resources/views/Advertisement/shopDetail.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Advertisement/shopDetail.html.twig
@@ -55,15 +55,15 @@
 			<h2><span>返利流程</span></h2>
 			<div class="con clearfix">
 				<div class="step">
-					<img src="{{ asset('img/advertisement/flow1.png') }}" alt="登录网站">
+					<img src="{{ asset('img/experience/flow1.png') }}" alt="登录网站">
 					<p>登录网站</p>
 				</div>
 				<div class="step">
-					<img src="{{ asset('img/advertisement/flow2.png') }}" alt="商家购物">
+					<img src="{{ asset('img/experience/flow2.png') }}" alt="商家购物">
 					<p>商家购物</p>
 				</div>
 				<div class="step last">
-					<img src="{{ asset('img/advertisement/flow3.png') }}" alt="订单生效，积分到账">
+					<img src="{{ asset('img/experience/flow3.png') }}" alt="订单生效，积分到账">
 					<p>订单生效，积分到账</p>
 				</div>
 			</div>
