--- a/src/Jili/ApiBundle/Resources/views/Admin/advertisermentCheck.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/advertisermentCheck.html.twig
@@ -29,7 +29,7 @@ function sendContent(){
 <form  method="post" action="{{ path('_admin_advertisermentCheck')}}">
 <table style="padding:100px;" >
   <tr><td>&nbsp;</td><td>&nbsp;</td></tr>
-    <tr><td>体验广告检查&nbsp;&nbsp;</td><td><input id="content" type="text" name="content" value="{{ content }}"//></td></tr>
+    <tr><td>任务体验检查&nbsp;&nbsp;</td><td><input id="content" type="text" name="content" value="{{ content }}"//></td></tr>
 	<tr><td>&nbsp;</td><td>&nbsp;</td></tr>
 	<tr><td></td><td><input type="button" value='清除' onclick="aa()";><input type="button" value='提交' onclick="sendContent()" ></td></tr>
  </table>
