--- a/src/Jili/ApiBundle/Resources/views/Admin/menu.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/menu.html.twig
@@ -293,18 +293,18 @@
         <TABLE cellSpacing=0 cellPadding=0 width=150 border=0>
             <TR height=22>
                 <TD style="PADDING-LEFT: 30px" background="{{ asset('img/admin/menu_bt.jpg')}}">
-                    <A class=menuParent onclick=expand(23) href="javascript:void(0);">体验广告管理</A>
+                    <A class=menuParent onclick=expand(23) href="javascript:void(0);">任务体验管理</A>
                 </TD>
             </TR>
         </TABLE>
         <TABLE id=child23 style="DISPLAY: none" cellSpacing=0 cellPadding=0 width=150 border=0>
             <TR height=20>
                 <TD align=middle width=30><IMG height=9 src="{{ asset('img/admin/menu_icon.gif')}}" width=9></TD>
-                <TD><A class=menuChild href="{{ path('experience_ad_list') }}" target=main>体验广告编辑</A></TD>
+                <TD><A class=menuChild href="{{ path('experience_ad_list') }}" target=main>任务体验编辑</A></TD>
             </TR>
             <TR height=20>
                 <TD align=middle width=30><IMG height=9 src="{{ asset('img/admin/menu_icon.gif')}}" width=9></TD>
-                <TD><A class=menuChild href="{{ path('_bankend_addExperienceAdvertisement') }}" target=main>体验广告添加</A></TD>
+                <TD><A class=menuChild href="{{ path('_bankend_addExperienceAdvertisement') }}" target=main>任务体验添加</A></TD>
             </TR>
         </TABLE>
 
