--- a/src/Wenwen/FrontendBundle/Resources/views/About/map.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/About/map.html.twig
@@ -36,7 +36,7 @@
 					<li class="font16"><strong>快速问答</strong></li><li><a href="{{ path('jili_frontend_vote_index') }}" title="快速问答">快速问答</a></li><li><a href="{{ path('jili_frontend_vote_suggest') }}" title="有奖出题">有奖出题</a></li>
 				</ul>
 				<ul class="clearfix">
-					<li class="font16"><strong>体验广告</strong></li><li><a href="{{ path('_advertiserment_list') }}" title="体验广告">体验广告</a></li><li><a href="{{ path('jili_frontend_cpsadvertisement_list') }}" title="返利商家">返利商家</a></li>
+					<li class="font16"><strong>任务体验</strong></li><li><a href="{{ path('_advertiserment_list') }}" title="任务体验">任务体验</a></li><li><a href="{{ path('jili_frontend_cpsadvertisement_list') }}" title="返利商家">返利商家</a></li>
 				</ul>
 				<ul class="clearfix">
 					<li class="font16"><strong>兑换中心</strong></li><li><a href="{{ path('_exchange_index') }}" title="兑换中心">兑换中心</a></li>
