--- a/src/Wenwen/FrontendBundle/Resources/views/Components/_headerNav.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Components/_headerNav.html.twig
@@ -16,7 +16,7 @@
             {% endif %}
             <a href="{{ path('jili_frontend_vote_index') }}" title="快速问答" {{ router_current == 'jili_frontend_vote_index' ? 'class="active"':'' }}>快速问答</a>
             {% if app.session.has('uid') %}
-            <a href="{{ path('_advertiserment_list') }}" title="体验广告" {{ router_current == '_advertiserment_list' ? 'class="active"':'' }}>体验广告</a>
+            <a href="{{ path('_advertiserment_list') }}" title="任务体验" {{ router_current == '_advertiserment_list' ? 'class="active"':'' }}>任务体验</a>
             {% endif %}
             <a href="{{ path('_exchange_index') }}" title="兑换中心" {{ router_current == '_exchange_index' ? 'class="active"':'' }}>兑换中心</a>
             <div class="border"></div>
