--- a/src/Wenwen/FrontendBundle/Resources/views/Help/index.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Help/index.html.twig
@@ -21,7 +21,7 @@
             <li class="active">账号问题</li>
             <li>问卷问题</li>
 			<li>购物返利</li>
-            <li>体验广告</li>
+            <li>任务体验</li>
             <li>积分兑换</li>
         </ul>
         <div class="feedback">
@@ -175,8 +175,8 @@
         <ul class="con">
         	<li>
                 <div class="title"><em>1</em><span>如何获得返利</span><span class="icons"></span></div>
-                <p>1.登录91问问调查网账户，进入“体验广告”页面，点击“返利商家”模块的右下角“全部>>”，进入商家列表页面，找到您感兴趣的商家，并点击“直接购物”。选择需要购买的商品，下单购买商品。回到91问问调查网，点击页面右上角的“个人中心”的下拉菜单，选择“我的任务历史”查看您的购物返利状态。<br>
-2.进入“体验广告”页面，点击左上方的滚动的促销活动，前往商家活动页面，从列表中找到您感兴趣的商家活动并点击活动图片前往。找到您感兴趣的物品并下订单完成购买。您可以在页面右上角的“个人中心”的下拉菜单，选择“我的任务历史”查看您的购物返利状态。</p>
+                <p>1.登录91问问调查网账户，进入“任务体验”页面，点击“返利商家”模块的右下角“全部>>”，进入商家列表页面，找到您感兴趣的商家，并点击“直接购物”。选择需要购买的商品，下单购买商品。回到91问问调查网，点击页面右上角的“个人中心”的下拉菜单，选择“我的任务历史”查看您的购物返利状态。<br>
+2.进入“任务体验”页面，点击左上方的滚动的促销活动，前往商家活动页面，从列表中找到您感兴趣的商家活动并点击活动图片前往。找到您感兴趣的物品并下订单完成购买。您可以在页面右上角的“个人中心”的下拉菜单，选择“我的任务历史”查看您的购物返利状态。</p>
             </li>
             <li>
                 <div class="title"><em>2</em><span>返利何时到账</span><span class="icons"></span></div>
@@ -203,12 +203,12 @@
         </ul>
         <ul class="con">
         	<li>
-                <div class="title"><em>1</em><span>体验广告如何获得返利</span><span class="icons"></span></div>
-                <p>点击菜单栏的“体验广告”按钮，前往体验广告页面。选择您感兴趣的体验广告，并点击前往查看详细。请仔细阅读体验广告的流程，并确定自己是否符合要求。如果您符合要求，请点击“领取任务”按钮，将会带您去参加任务。并请您认真一步步完成任务。在任务历史页面，可以查看您的体验广告状态。</p>
+                <div class="title"><em>1</em><span>任务体验如何获得返利</span><span class="icons"></span></div>
+                <p>点击菜单栏的“任务体验”按钮，前往任务体验页面。选择您感兴趣的任务体验，并点击前往查看详细。请仔细阅读任务体验的流程，并确定自己是否符合要求。如果您符合要求，请点击“领取任务”按钮，将会带您去参加任务。并请您认真一步步完成任务。在任务历史页面，可以查看您的任务体验状态。</p>
             </li>
             <li>
-                <div class="title"><em>2</em><span>体验广告没有获得返利</span><span class="icons"></span></div>
-                <p>关于体验广告的返利，请联系体验广告的在线客服。</p>
+                <div class="title"><em>2</em><span>任务体验没有获得返利</span><span class="icons"></span></div>
+                <p>关于任务体验的返利，请联系任务体验的在线客服。</p>
             </li>
             
         </ul>
