--- a/src/Wenwen/FrontendBundle/Resources/views/Help/newGuide.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Help/newGuide.html.twig
@@ -43,9 +43,9 @@
                 </dl>
             </li>
             <li>
-            	<em><img src="{{ asset('img/help/icon04.png') }}" width="105" height="84" alt="体验广告"/></em>
+            	<em><img src="{{ asset('img/help/icon04.png') }}" width="105" height="84" alt="任务体验"/></em>
                 <dl>
-                    <dt>体验广告</dt>
+                    <dt>任务体验</dt>
                     <dd>各种体验，不同玩法，积分收入囊中！</dd>
                     <dd><a href="{{ path('_default_support_newGuide_detail') }}#advertiserment" class="more">快去了解</a></dd>
                 </dl>
