--- a/src/Wenwen/FrontendBundle/Resources/views/Help/newGuideDetail.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Help/newGuideDetail.html.twig
@@ -43,7 +43,7 @@
 			<h3>购物返利</h3>
 			<a class="back" href="{{ path('_default_support_newGuide') }}">返回新手上路»</a>
                <dl>
-                    <dt><strong>第一步</strong>进入体验广告页面，点击返利商家右下角的“全部>>”</dt>
+                    <dt><strong>第一步</strong>进入任务体验页面，点击返利商家右下角的“全部>>”</dt>
                     <dd><img src="{{ asset('img/help/guide3-1.jpg') }}" width="800" height="407"/></dd>
                     <dt><strong>第二步</strong>进入商家列表页面，点击“直接购物”，跳转到商家页面</dt>
                     <dd><img src="{{ asset('img/help/guide3-2.jpg') }}" width="800" height="510"/></dd>
@@ -54,12 +54,12 @@
                </dl>
           </div>
           <div class="newGuideDetail" id="advertiserment">
-			<h3>体验广告</h3>
+			<h3>任务体验</h3>
 			<a class="back" href="{{ path('_default_support_newGuide') }}">返回新手上路»</a>
                <dl>
-                    <dt><strong>第一步</strong>进入体验广告页面</dt>
+                    <dt><strong>第一步</strong>进入任务体验页面</dt>
                     <dd><img src="{{ asset('img/help/guide4-1.jpg') }}" width="800" height="493"/></dd>
-                    <dt><strong>第二步</strong>进行体验广告</dt>
+                    <dt><strong>第二步</strong>进行任务体验</dt>
                     <dd><img src="{{ asset('img/help/guide4-2.jpg') }}" width="800" height="510"/></dd>
                     <dt><strong>第三步</strong>点击右上角个人中心->任务历史，查看该任务的最新状态</dt>
                     <dd><img src="{{ asset('img/help/guide4-3.jpg') }}" width="800" height="350"/></dd>
