--- a/src/Wenwen/FrontendBundle/Resources/views/Survey/_sopSurveyListHome.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Survey/_sopSurveyListHome.html.twig
@@ -1,5 +1,10 @@
-<ul id="surveyList">
-	{% for html_survey in html_survey_list %}
-		<li>{{ html_survey | raw }}</li>
-	{% endfor %}
-</ul>
+{% if html_survey_list|length > 0 %}
+<div class="survey" id="surveyHome">
+	<h1><em></em>问卷列表<a class="more" href="{{ path('_survey_index') }}">更多>></a></h1>
+	<ul id="surveyList">
+		{% for html_survey in html_survey_list %}
+			<li>{{ html_survey | raw }}</li>
+		{% endfor %}
+	</ul>
+</div>
+{% endif %}
